syntax = "proto3";

package semantic_proprioception;

// Main Krapivin LSH index structure
message KrapivinIndex {
  // LSH configuration
  uint64 lsh_seed = 1;              // Fixed seed for LSH (e.g., 12345)
  uint32 lsh_num_hyperplanes = 2;   // Number of hyperplanes (hash bits)
  uint32 embedding_dim = 3;         // Dimensionality of embeddings

  // Krapivin hash table configuration
  uint32 alpha = 4;                 // Number of hierarchical levels
  double delta = 5;                 // Empty fraction parameter
  uint32 beta = 6;                  // Probing parameter

  // Hash table structure
  repeated Level levels = 7;

  // File tracking
  repeated string indexed_files = 8;  // Parquet file paths

  // Merkle tree metadata
  bytes table_merkle_root = 9;        // Root hash for entire table
  repeated bytes level_merkle_roots = 10;  // Per-level Merkle roots

  // Metadata
  uint64 total_vectors = 11;        // Total number of indexed vectors
  uint64 timestamp_created = 12;    // Unix timestamp
  uint64 timestamp_modified = 13;   // Unix timestamp
  string version = 14;              // Schema version (e.g., "1.0.0")
}

// A single level in the hierarchical hash table
message Level {
  uint32 level_index = 1;           // Level number (0 to alpha-1)
  repeated Bucket buckets = 2;      // Buckets at this level
  uint64 num_entries = 3;           // Count of entries at this level
  double load_factor = 4;           // Current load factor
}

// A bucket containing LSH hash and file references
message Bucket {
  uint64 bucket_id = 1;             // LSH hash value (bucket ID)

  // Tag metadata (Krapivin composability)
  uint32 fingerprint = 2;           // 8-bit hash prefix for fast filtering
  uint32 level = 3;                 // Level where this bucket landed

  // File references (vectors in this bucket)
  repeated FileRef refs = 4;

  // Optional: bucket-level Merkle root
  bytes bucket_merkle_root = 5;
}

// Reference to a vector in a Parquet file
message FileRef {
  string file_path = 1;             // Path to Parquet file
  uint64 row_id = 2;                // Row index in Parquet file

  // Optional: for verification/debugging
  bytes embedding_hash = 3;         // Hash of the actual embedding vector
}

// Merkle proof for verification
message MerkleProof {
  uint32 level_index = 1;
  repeated bytes proof_hashes = 2;
  bytes claimed_root = 3;
}

// Index statistics (optional, for monitoring)
message IndexStats {
  repeated double level_densities = 1;  // Load factor per level
  uint64 num_buckets = 2;               // Total unique buckets
  uint64 num_files = 3;                 // Number of indexed files
  uint64 max_bucket_size = 4;           // Largest bucket (dense bucket)
  uint64 min_bucket_size = 5;           // Smallest bucket
  double avg_bucket_size = 6;           // Average bucket size

  // Density distribution
  map<uint32, uint64> level_entry_counts = 7;  // Entries per level
}
